<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="Principal" />
        <item
            android:id="@+id/nav_servicios"
            android:icon="@drawable/taller_icon"
            android:title="@string/servicios" />
        <item
            android:id="@+id/nav_promotions"
            android:icon="@drawable/promociones"
            android:title="@string/promociones" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contactanos"
            android:title="@string/contactanos" />
        <item
            android:id="@+id/nav_buscanos"
            android:icon="@drawable/location"
            android:title="@string/encuentranos" />
    </group>
    <group android:checkableBehavior="single">
        <item android:id="@+id/cerrarsesion"
            android:icon="@drawable/shutdown_icon_flat"
            android:title="@string/cerrarsesion"/>
    </group>

   <!-- <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
-->
</menu>
